--- a/my-ts-react-app/src/sass/global.scss
+++ b/my-ts-react-app/src/sass/global.scss
@@ -2,12 +2,12 @@
 @import 'fonts.scss';
 
 .section {
-    height: 100vh;
     display: flex;
     align-items: center;
     padding: 15px;
     justify-content: center;
     overflow: hidden;
+    padding-bottom: 8rem;
 
 }
 
